--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
         font-size: 16px;
         letter-spacing: 0.25px;
         overflow-x: hidden;
+        color: rgb(0 0 0 / 80%);
       }
     </style>
   </head>
